# flashkraft

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  ELM_ARCHITECTURE.md  README.md  cliff.toml  flake.nix  justfile  justfile.backup
.gitea/workflows/: ci.yml  nightly.yml  release.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
.zed/: rules.md
crates/flashkraft-core/: Cargo.toml
crates/flashkraft-core/examples/: constraints_demo.rs  detect_drives.rs  flash_writer_demo.rs
crates/flashkraft-core/src/: flash_helper.rs  flash_writer.rs  lib.rs
crates/flashkraft-core/src/commands/: drive_detection.rs  hotplug.rs  mod.rs
crates/flashkraft-core/src/domain/: drive_info.rs  mod.rs
crates/flashkraft-core/src/utils/: logger.rs  mod.rs
crates/flashkraft-gui/: Cargo.toml  build.rs  flashkraft.exe.manifest
crates/flashkraft-gui/examples/: basic_usage.rs  custom_theme.rs
crates/flashkraft-gui/examples/vhs/: demo-basic.tape  demo-build.tape  demo-quick.tape
crates/flashkraft-gui/src/: lib.rs  main.rs  view.rs
crates/flashkraft-gui/src/components/: animated_progress.rs  device_selector.rs  header.rs  mod.rs  progress_line.rs  status_views.rs  theme_selector.rs
crates/flashkraft-gui/src/core/: flash_subscription.rs  message.rs  mod.rs  state.rs  update.rs
crates/flashkraft-gui/src/core/commands/: mod.rs
crates/flashkraft-gui/src/utils/: mod.rs
crates/flashkraft-tui/: Cargo.toml  build.rs  flashkraft-tui.exe.manifest
crates/flashkraft-tui/examples/: flash_progress_demo.rs  headless_demo.rs  theme_demo.rs  tui_demo.rs
crates/flashkraft-tui/examples/vhs/: flash-progress.tape  theme-switcher.tape  tui-demo.tape  tui-headless.tape
crates/flashkraft-tui/src/: lib.rs  main.rs
crates/flashkraft-tui/src/file_explorer/: mod.rs
crates/flashkraft-tui/src/tui/: app.rs  events.rs  flash_runner.rs  mod.rs  storage.rs  theme.rs  ui.rs
docs/: FLATTENED_STRUCTURE.md  ICONS_AND_ANIMATIONS.md
examples/: README.md  SUMMARY.md  basic_usage.rs  custom_theme.rs
examples/vhs/: README.md  demo-architecture.tape  demo-basic.tape  demo-build.tape  demo-examples.tape  demo-features.tape  demo-quick.tape  demo-storage.tape  demo-themes.tape  demo-workflow.tape  generate-all.sh
scripts/: bump_version.sh  check_publish.sh  generate_tapes.sh
src/: command.rs  flash_subscription.rs  icons.rs  lib.rs  main.rs  main_tui.rs  message.rs  model.rs  update.rs  view.rs
src/components/: animated_progress.rs  device_selector.rs  header.rs  progress_line.rs  selection_panels.rs  status_views.rs  step_indicators.rs
src/core/: flash_helper.rs  flash_subscription.rs  flash_writer.rs  message.rs  mod.rs  state.rs  storage.rs  update.rs
src/core/commands/: drive_detection.rs  file_selection.rs  mod.rs
src/domain/: constraints.rs  drive_info.rs  image_info.rs  mod.rs
src/tui/: events.rs  flash_runner.rs  mod.rs  ui.rs
src/utils/: icons_bootstrap_mapper.rs  logger.rs  mod.rs
