[workspace]
members = [
    "crates/flashkraft-core",
    "crates/flashkraft-gui",
    "crates/flashkraft-tui",
]
resolver = "2"

[workspace.package]
version      = "0.4.5"
edition      = "2021"
authors      = ["Sorin Irimies <sorinirimies@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/sorinirimies/flashkraft"

# ── Shared dependency versions ─────────────────────────────────────────────────
# Pin versions here once; each crate's Cargo.toml references them with
# `{ workspace = true }` so there is a single source of truth.

[workspace.dependencies]
# Core / shared
sysinfo      = "0.30"
nix          = { version = "0.29", features = ["fs", "ioctl", "mount"] }
futures      = "0.3"
futures-timer = "3.0"
sled         = "0.34"
dirs         = "5.0"
sha2         = "0.10"
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"

# GUI (Iced)
iced         = { version = "0.13.1", features = ["advanced", "canvas"] }
iced_aw      = "0.12.2"
iced_fonts   = { version = "0.1", features = ["bootstrap"] }
rfd          = "0.15"

# TUI (Ratatui)
ratatui      = "0.30"
crossterm    = "0.29"
tui-slider   = { git = "https://github.com/sorinirimies/tui-slider" }
tui-piechart = { git = "https://github.com/sorinirimies/tui-piechart" }
tui-checkbox = { git = "https://github.com/sorinirimies/tui-checkbox" }

# Internal crates
flashkraft-core = { path = "crates/flashkraft-core", version = "0.4.5" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto       = true
