[workspace]
members = [
    "crates/flashkraft-core",
    "crates/flashkraft-gui",
    "crates/flashkraft-tui",
]
resolver = "2"

[package]
name = "flashkraft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A lightning fast, low memory OS image writer — desktop GUI (Iced) and terminal UI (Ratatui)"
categories = ["command-line-utilities", "filesystem"]
keywords = ["imager", "disk", "usb", "iso", "flash"]
readme = "README.md"

[[bin]]
name = "flashkraft"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "flashkraft-tui"
path = "src/main_tui.rs"
required-features = ["tui"]

[features]
default = []
gui = ["dep:flashkraft-gui"]
tui = ["dep:flashkraft-tui", "dep:tokio", "dep:anyhow"]

[dependencies]
flashkraft-gui = { path = "crates/flashkraft-gui", optional = true }
flashkraft-tui = { path = "crates/flashkraft-tui", optional = true }
tokio  = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }


[workspace.package]
version      = "0.5.1"
edition      = "2021"
authors      = ["Sorin Irimies <sorinirimies@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/sorinirimies/flashkraft"

# ── Shared dependency versions ─────────────────────────────────────────────────
# Pin versions here once; each crate's Cargo.toml references them with
# `{ workspace = true }` so there is a single source of truth.

[workspace.dependencies]
# Core / shared
sysinfo      = "0.30"
nix          = { version = "0.29", features = ["fs", "ioctl", "mount"] }
futures      = "0.3"
futures-timer = "3.0"
sled         = "0.34"
dirs         = "5.0"
sha2         = "0.10"
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"

# GUI (Iced)
iced         = { version = "0.13.1", features = ["advanced", "canvas"] }
iced_aw      = "0.12.2"
iced_fonts   = { version = "0.1", features = ["bootstrap"] }
rfd          = "0.15"

# TUI (Ratatui)
ratatui              = "0.30"
crossterm            = "0.29"
tui-file-explorer    = "0.1.4"
tui-slider   = "0.3.0"
tui-piechart = "0.3.0"
tui-checkbox = "0.4.3"

# Internal crates
flashkraft-core = { path = "crates/flashkraft-core", version = "0.5.1" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto       = true
