[workspace]
members = [
    "crates/flashkraft-core",
    "crates/flashkraft-gui",
    "crates/flashkraft-tui",
]
resolver = "2"



[workspace.package]
version      = "0.6.6"
edition      = "2021"
authors      = ["Sorin Irimies <sorinirimies@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/sorinirimies/flashkraft"

# ── Shared dependency versions ─────────────────────────────────────────────────
# Pin versions here once; each crate's Cargo.toml references them with
# `{ workspace = true }` so there is a single source of truth.

[workspace.dependencies]
# Core / shared
sysinfo      = "0.30"
windows-sys  = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
] }
nix          = { version = "0.29", features = ["fs", "ioctl", "mount", "user"] }
nusb         = { version = "0.2", features = ["tokio"] }
futures      = "0.3"
futures-timer = "3.0"
sled         = "0.34"
dirs         = "5.0"
sha2         = "0.10"
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"

# GUI (Iced)
iced         = { version = "0.13.1", features = ["advanced", "canvas"] }
iced_aw      = "0.12.2"
iced_fonts   = { version = "0.1", features = ["bootstrap"] }
rfd          = "0.15"

# TUI (Ratatui)
ratatui              = "0.30"
crossterm            = "0.29"
tui-file-explorer    = "0.1.5"
tui-slider   = "0.3.0"
tui-piechart = "0.3.0"
tui-checkbox = "0.4.3"

# Internal crates
flashkraft-core = { path = "crates/flashkraft-core", version = "0.6.6" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto       = true
