[package]
name = "flashkraft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FlashKraft — OS image writer desktop application (Iced GUI)"
readme = "README.md"
categories = ["gui", "command-line-utilities", "filesystem"]
keywords = ["imager", "disk", "usb", "iso", "flash"]

[lib]
name = "flashkraft_gui"
path = "src/lib.rs"

[[bin]]
name = "flashkraft"
path = "src/main.rs"

[dependencies]
# ── Shared core ───────────────────────────────────────────────────────────────
flashkraft-core = { workspace = true }
nix             = { workspace = true }

# ── GUI framework ─────────────────────────────────────────────────────────────
iced       = { workspace = true }
iced_aw    = { workspace = true }
iced_fonts = { workspace = true }
rfd        = { workspace = true }

# ── Async utilities ───────────────────────────────────────────────────────────
futures       = { workspace = true }
futures-timer = { workspace = true }

# ── Storage / persistence ─────────────────────────────────────────────────────
sled = { workspace = true }
dirs = { workspace = true }
