[package]
name = "flashkraft-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FlashKraft — OS image writer terminal application (Ratatui TUI)"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["imager", "disk", "usb", "iso", "flash"]

[lib]
name = "flashkraft_tui"
path = "src/lib.rs"

[[bin]]
name = "flashkraft-tui"
path = "src/main.rs"

[dependencies]
# ── Shared core ───────────────────────────────────────────────────────────────
flashkraft-core = { workspace = true }
nix             = { workspace = true }

# ── TUI framework ─────────────────────────────────────────────────────────────
ratatui            = { workspace = true }
crossterm          = { workspace = true }
tui-file-explorer  = { workspace = true }
tui-slider   = { workspace = true }
tui-piechart = { workspace = true }
tui-checkbox = { workspace = true }

# ── Filesystem helpers ────────────────────────────────────────────────────────
dirs   = { workspace = true }

# ── Persistence ───────────────────────────────────────────────────────────────
sled   = { workspace = true }

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio  = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"

# ── Build dependencies ────────────────────────────────────────────────────────
# winres embeds the UAC manifest into the Windows PE binary at compile time
# so Windows shows the Administrator elevation prompt on launch.
# It is NOT linked into the final binary — build-time only.
# The target gate means it is not even fetched on Linux / macOS.
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
